--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/app.ts"
+    "dev": "ts-node-dev --exit-child src/app.ts"
   },
   "dependencies": {
     "axios": "^0.23.0",
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
+    "@prisma/client": "^3.3.0",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
